너무 어렵다 진짜

--- a/index3.html
+++ b/index3.html
@@ -8,41 +8,108 @@
   <!-- 스타일 초기화: 브라우저 별로 다르 기본스타일이 적용되는것을 초기화 -->
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
 
-  <script defer src="./JS/main2.js"></script>
-  <link rel="stylesheet" href="./css/main3.css">
+  <script defer src= "./main2.js"></script>
+  <link rel="stylesheet" href="./main3.css">
 </head>
 <body>
   <div class="container">
+    <div class="logo">
+      <a href="../apple-touch-icon-144x144.png"></a>
+    </div>
+    <div class="sub-menu">
     <ul class="login">
-      <li class="login-2">
+      <li >
         <a href="/index3.html">로그인</a>
       </li>
-      <li class="login-2">
+      <li>
         <a href="/index3.html">회원가입</a>
       </li>
     </ul>
+  </div>
   <div class="main-menu">
     <ul class="menu">
       <li class="item">
-        <a class="m-menu" href="/index3.html">핫시즈너</a>
+        <a class="m-menu" href="javascript:void(0)">핫시즈너</a>
       </li>
       <li class="item">
-        <a class="m-menu" href="/index3.html">메뉴소개<a>
+        <a class="m-menu" href="javascript:void(0)">메뉴소개<a>
       </li>
       <li class="item">
-        <a class="m-menu" href="/index3.html">가맹문의</a>
+        <a class="m-menu" href="javascript:void(0)">가맹문의</a>
       </li>
       <li class="item">
-        <a class="m-menu" href="/index3.html">이벤트</a>
+        <a class="m-menu" href="javascript:void(0)" >이벤트</a>
       </li>
       <li class="item">
-        <a class="m-menu" href="/index3.html">매장정보</a>
+        <a class="m-menu" href="javascript:void(0)">매장정보</a>
       </li>
       <li class="item">
-        <a class="m-menu" href="/index3.html">고객안내</a>
+        <a class="m-menu" href="javascript:void(0)">고객안내</a>
+      </li>
+      <li class="item">
+        <a class="m-menu" href="javascript:void(0)">상품권</a>
       </li>
     </ul>
     </div>
+</div>
+<div class="are-fa">
+<div class="are">
+  <div>
+    <ul class="hotsiz">
+      <li>회사소개</li>
+      <li>bi&ci</li>
+      <li>브랜드소개</li>
+      <li>오시는길</li>
+      <li>회사소개</li>
+    </ul>
+  </div>
+  <div>
+    <ul class="sogae">
+      <li>엽기떡볶이메뉴</li>
+    </ul>
+  </div>
+  <div>
+    <ul class="muni">
+      <li>인테리어</li>
+      <li>창업절차</li>
+      <li>개설비용</li>
+      <li>창업FAQ</li>
+      <li>가맹문의</li>
+    </ul>
+  </div>
+  <div>
+    <ul class="event">
+      <li>이벤트 & 안내</li>
+    </ul>
+  </div>
+  <div>
+    <ul class="information">
+      <li>엽기떡볶이 매장</li>
+    </ul>
+  </div>
+  <div>
+    <ul class="annae">
+      <li>공지사항</li>
+      <li>자주하는 질문</li>
+      <li>고객의 소리</li>
+      <li>엽기떡볶이 미디어</li>
+    </ul>
+  </div>
+  <div>
+    <ul class="cash">
+      <li>상품권 구매</li>
+      <li>상품권 연장</li>
+      <li>상품권 환불</li>
+      <li>상품권 재발급</li>
+      <li>상품권 유의사항</li>
+    </ul>
+  </div>
+  <div>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
+</div>
 </div>
 </body>
 </html>
