--- a/index3.html
+++ b/index3.html
@@ -8,8 +8,8 @@
   <!-- 스타일 초기화: 브라우저 별로 다르 기본스타일이 적용되는것을 초기화 -->
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
 
-  <script defer src= "./main2.js"></script>
-  <link rel="stylesheet" href="./main3.css">
+  <script defer src= "./JS/main2.js"></script>
+  <link rel="stylesheet" href="./css/main3.css">
 </head>
 <body>
   <div class="container">
@@ -27,6 +27,7 @@
     </ul>
   </div>
   <div class="main-menu">
+    <div class="logo"><img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20131206_50%2Fwnsgh2345_1386323058869QPV9f_PNG%2F33334.png&type=a340" alt=""></div>
     <ul class="menu">
       <li class="item">
         <a class="m-menu" href="javascript:void(0)">핫시즈너</a>
