과제 조금 더했음

--- a/index4.html
+++ b/index4.html
@@ -102,9 +102,38 @@
 </div>
 </div>
 <div class="chuchen">
-  <div class="yuppduk">YUPDDUK</div>
+  <div class="yuppduk">YUPDDUK MENU</div>
   <div class="yup-chuchen">엽기떡볶이가 추천합니다</div>
-  <div></div>
+  <div class="chuchen-menu">
+  <div class="yonjo"> 
+    <div class="yonjo-sub">
+      <div class="yonjo-yup">YUPDDUK</div>
+      <div class="yonjo-spi">매운맛의 원조</div>
+      <a href="#">more</a>
+    </div>
+  </div>
+  <div class="SIDE"> 
+    <div class="SIDE-SUB">
+      <div class="SIDE-SIDE">SIDE</div>
+      <div class="SIDE-HOT">핫시즈너 사이드 메뉴</div>
+      <a href="#">more</a>
+    </div>
+  </div>
+  <div class="TOPPING"> 
+    <div class="TOPPING-SUB">
+      <div class="TOPPING-TOP">TOPPING</div>
+      <div class="TOPPING-TOP-GOOD">토핑으로 더욱 맛있게!</div>
+      <a href="#">more</a>
+    </div>
+  </div>
+  <div class="SET"> 
+    <div class="SET-SUB">
+      <div class="SET-SET">SET</div>
+      <div class="SET-MORESET">다양한 세트메뉴</div>
+      <a href="#">more</a>
+    </div>
+  </div>
+</div>
 </div>
 </body>
 </html>
