유투브 영상 집어넣기"

--- a/index4.html
+++ b/index4.html
@@ -16,9 +16,9 @@
           <li><a href="#" class="top-menu">핫시즈너</a>
             <div></div>
             <ul class="sub-menu">
-              <li>회사소개</li>
-              <li>bi&ci</li>
-              <li>브랜드소개</li>
+              <li>회사소개</li><br>
+              <li>bi&ci</li><br>
+              <li>브랜드소개</li><br>
               <li>오시는길</li>
             </ul>
           </li>
@@ -29,9 +29,9 @@
           </li>
           <li><a href="#" class="top-menu">가맹문의</a>
             <ul class="sub-menu">
-              <li>인테리어</li>
-              <li>창업절차</li>
-              <li>개설비용</li>
+              <li>인테리어</li><br>
+              <li>창업절차</li><br>
+              <li>개설비용</li><br>
               <li>창업FAQ</li>
             </ul>
           </li>
@@ -47,18 +47,18 @@
           </li>
           <li><a href="#" class="top-menu">고객안내</a>
             <ul class="sub-menu">
-              <li>공지사항</li>
-              <li>자주하는 질문</li>
-              <li>고객의소리</li>
+              <li>공지사항</li><br>
+              <li>자주하는 질문</li><br>
+              <li>고객의소리</li><br>
               <li>엽기떡볶이 미디어</li>
             </ul>
           </li>
           <li><a href="#" class="top-menu">상품권</a>
             <ul class="sub-menu">
-              <li>상품권 구매</li>
-              <li>상품권 연장</li>
-              <li>상품권 환불</li>
-              <li>상품권 재발급</li>
+              <li>상품권 구매</li><br>
+              <li>상품권 연장</li><br>
+              <li>상품권 환불</li><br>
+              <li>상품권 재발급</li><br>
               <li>상품권 유의사항</li>
             </ul>
           </li>
