--- a/index4.html
+++ b/index4.html
@@ -70,6 +70,13 @@
     <img class="gwanggo-1" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F023%2F2020%2F09%2F29%2F2020092902553_5_20201005112910417.jpg&type=a340"alt="">
     <img class="gwanggo-1" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA2MjZfNjIg%2FMDAxNTYxNTM1NTA5NjQ2.zKNg0v1yXHE_y998PEraNb_XYSpTMgG50VRADyeCpT4g.FhH5mZEeYuPT75LVaaPWYIqgMLoRMC4p7d2-fwUlCLQg.JPEG.po00206%2F0011.jpg&type=a340" alt="">
     <img class="gwanggo-1" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA3MDRfODkg%2FMDAxNjU2OTE0ODkyNDA5.j08dYKK3k4kSNV9RazU33PAxlSqgMERIPbw3AQZesmYg.vCMiUokRD_y88VzGHAjw07tUn0X1hHAce9j0HQFQHhEg.JPEG.hahahslee57%2F%253F%2597%25BD55.jpg&type=l340_165" alt="">
+
+    <div class="swiper-button-prev">
+      <span class="material-icons">arrow_back</span>
+    </div>
+    <div class="swiper-button-next">
+      <span class="material-icons">arrow_forward</span>
+    </div>
   </div>
 </div>
 <div class="Text">
