--- a/index4.html
+++ b/index4.html
@@ -1,75 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/main4.css">
+  <script defer src="./JS/main4.js"></script>
 </head>
+
 <body>
   <header>
-    
+    <button id="m-button" onclick="viewMenu()"></button>
+    <div class="mm-menu">
+      <div class="m-menu">
+        <div class="m-bar">
+          <div class="m-12">
+            <div class="m1">
+              로그인
+            </div>
+            <div class="m2">
+              회원가입
+            </div>
+          </div>
+          <div class="m3">
+            핫시즈너
+          </div>
+          <div class="m3">
+            메뉴소개
+          </div>
+          <div class="m3">
+            가맹문의
+          </div>
+          <div class="m3">
+            이벤트
+          </div>
+          <div class="m3">
+            매장정보
+          </div>
+          <div class="m3">
+            고객안내
+          </div>
+
+          <div class="m4">
+            <img src="https://www.yupdduk.com/images/main/icon_certi02.png" alt="">상품권
+          </div>
+        </div>
+
+        <div class="m-logo">
+          <img class="m-logos" src="https://www.yupdduk.com/images/main/float_instargram4.png" alt=""><a href="#"></a>
+          <img class="m-logos" src="https://www.yupdduk.com/images/main/float_blog4.png" alt=""><a href="#"></a>
+          <img class="m-logos" src="https://www.yupdduk.com/images/main/float_youtube4.png" alt=""><a href="#"></a>
+          <img class="m-logos" src="https://www.yupdduk.com/images/main/float_kakaotalk.png" alt=""><a href="#"></a>
+          <img class="m-logos" src="https://www.yupdduk.com/images/main/float_facebook4.png" alt=""><a href="#"></a>
+          <img class="m-logos" src="https://www.yupdduk.com/images/main/float_twitter.png" alt=""><a href="#"></a>
+        </div>
+
+      </div>
+    </div>
     <div class="box">
-    <div class="logo"><img src="https://www.yupdduk.com/images/logo61.png" alt="logo"></div>
-        <ul class="top-menu-box">
-          <li><a href="#" class="top-menu">핫시즈너</a>
-            <div></div>
-            <ul class="sub-menu">
-              <li>회사소개</li><br>
-              <li>bi&ci</li><br>
-              <li>브랜드소개</li><br>
-              <li>오시는길</li>
-            </ul>
-          </li>
-          <li><a href="#" class="top-menu">메뉴소개</a>
-            <ul class="sub-menu">
-              <li>엽기떡볶이 메뉴</li>
-            </ul>
-          </li>
-          <li><a href="#" class="top-menu">가맹문의</a>
-            <ul class="sub-menu">
-              <li>인테리어</li><br>
-              <li>창업절차</li><br>
-              <li>개설비용</li><br>
-              <li>창업FAQ</li>
-            </ul>
-          </li>
-          <li><a href="#" class="top-menu">이벤트</a>
-            <ul class="sub-menu">
-              <li>이벤트 & 안내</li>
-            </ul>
-          </li>
-          <li><a href="#" class="top-menu">매장정보</a>
-            <ul class="sub-menu">
-              <li>엽기떡볶이 매장</li>
-            </ul>
-          </li>
-          <li><a href="#" class="top-menu">고객안내</a>
-            <ul class="sub-menu">
-              <li>공지사항</li><br>
-              <li>자주하는 질문</li><br>
-              <li>고객의소리</li><br>
-              <li>엽기떡볶이 미디어</li>
-            </ul>
-          </li>
-          <li><a href="#" class="top-menu">상품권</a>
-            <ul class="sub-menu">
-              <li>상품권 구매</li><br>
-              <li>상품권 연장</li><br>
-              <li>상품권 환불</li><br>
-              <li>상품권 재발급</li><br>
-              <li>상품권 유의사항</li>
-            </ul>
-          </li>
-        </ul>
+      <div class="logo"><img src="https://www.yupdduk.com/images/logo61.png" alt="logo"></div>
+      <ul class="top-menu-box">
+        <li><a href="#" class="top-menu">핫시즈너</a>
+          <div></div>
+          <ul class="sub-menu">
+            <li>회사소개</li><br>
+            <li>bi&ci</li><br>
+            <li>브랜드소개</li><br>
+            <li>오시는길</li>
+          </ul>
+        </li>
+        <li><a href="#" class="top-menu">메뉴소개</a>
+          <ul class="sub-menu">
+            <li>엽기떡볶이 메뉴</li>
+          </ul>
+        </li>
+        <li><a href="#" class="top-menu">가맹문의</a>
+          <ul class="sub-menu">
+            <li>인테리어</li><br>
+            <li>창업절차</li><br>
+            <li>개설비용</li><br>
+            <li>창업FAQ</li>
+          </ul>
+        </li>
+        <li><a href="#" class="top-menu">이벤트</a>
+          <ul class="sub-menu">
+            <li>이벤트 & 안내</li>
+          </ul>
+        </li>
+        <li><a href="#" class="top-menu">매장정보</a>
+          <ul class="sub-menu">
+            <li>엽기떡볶이 매장</li>
+          </ul>
+        </li>
+        <li><a href="#" class="top-menu">고객안내</a>
+          <ul class="sub-menu">
+            <li>공지사항</li><br>
+            <li>자주하는 질문</li><br>
+            <li>고객의소리</li><br>
+            <li>엽기떡볶이 미디어</li>
+          </ul>
+        </li>
+        <li><a href="#" class="top-menu">상품권</a>
+          <ul class="sub-menu">
+            <li>상품권 구매</li><br>
+            <li>상품권 연장</li><br>
+            <li>상품권 환불</li><br>
+            <li>상품권 재발급</li><br>
+            <li>상품권 유의사항</li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </header>
 
   <div class="gwanggo">
-    <img class="gwanggo-1" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F023%2F2020%2F09%2F29%2F2020092902553_5_20201005112910417.jpg&type=a340"alt="">
-    <img class="gwanggo-1" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA2MjZfNjIg%2FMDAxNTYxNTM1NTA5NjQ2.zKNg0v1yXHE_y998PEraNb_XYSpTMgG50VRADyeCpT4g.FhH5mZEeYuPT75LVaaPWYIqgMLoRMC4p7d2-fwUlCLQg.JPEG.po00206%2F0011.jpg&type=a340" alt="">
-    <img class="gwanggo-1" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA3MDRfODkg%2FMDAxNjU2OTE0ODkyNDA5.j08dYKK3k4kSNV9RazU33PAxlSqgMERIPbw3AQZesmYg.vCMiUokRD_y88VzGHAjw07tUn0X1hHAce9j0HQFQHhEg.JPEG.hahahslee57%2F%253F%2597%25BD55.jpg&type=l340_165" alt="">
+    <img class="gwanggo-1"
+      src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F023%2F2020%2F09%2F29%2F2020092902553_5_20201005112910417.jpg&type=a340"
+      alt="">
+    <img class="gwanggo-1"
+      src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA2MjZfNjIg%2FMDAxNTYxNTM1NTA5NjQ2.zKNg0v1yXHE_y998PEraNb_XYSpTMgG50VRADyeCpT4g.FhH5mZEeYuPT75LVaaPWYIqgMLoRMC4p7d2-fwUlCLQg.JPEG.po00206%2F0011.jpg&type=a340"
+      alt="">
+    <img class="gwanggo-1"
+      src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA3MDRfODkg%2FMDAxNjU2OTE0ODkyNDA5.j08dYKK3k4kSNV9RazU33PAxlSqgMERIPbw3AQZesmYg.vCMiUokRD_y88VzGHAjw07tUn0X1hHAce9j0HQFQHhEg.JPEG.hahahslee57%2F%253F%2597%25BD55.jpg&type=l340_165"
+      alt="">
 
     <div class="swiper-button-prev">
       <span class="material-icons">arrow_back</span>
@@ -78,69 +133,70 @@
       <span class="material-icons">arrow_forward</span>
     </div>
   </div>
-</div>
-<div class="Text">
-<div class="NOTICE">
-<div class="NOTICE-BIG">NOTICE</div>
-<br>
-<ul class="NOTICE-UL">
-<li>[23.02.24]엽떡앱 일시적 로그인 불가 안내</li><br>
-<li>[23.02.14][2월 브랜드퀴즈 이벤트] 당첨자 안내</li><br>
-<li>[23.02.07]엽떡앱 [SKT 휴대폰 본인 확인 서비스] 일시 중단 안내</li><br>
-<li>[23.02.02]엽떡앱 방문포장 할인이벤트 연장</li><br><br>
-<li>MORE<img class="more" src="https://www.yupdduk.com/images/main/morebtn.png"  alt="더보기"></li>
-</ul>
-</div>
-<div class="EVENT">
-<div class="EVENT-BIG">EVENT</div>
-<br>
-<ul class="EVENT-UL">
-<li>[23.04.10 ~ 23.04.30] [이벤트] 홀 주문 포인트 2배 적립</li><br>
-<li>[23.04.06 ~ 23.04.27] [이벤트] 4월 목요일 타임이벤트</li><br>
-<li>[22.12.16] [안내] 엽기떡볶이 세트메뉴 리뉴얼 안내</li><br>
-<li>[22.10.12] [안내] 짜장떡볶이 리뉴얼 출시</li><br><br>
-<li>MORE<img class="more" src="https://www.yupdduk.com/images/main/morebtn.png"  alt="더보기"></li>
-</ul>
-</div>
-</div>
-<div class="appbanner">
-  <div class="appbanner-1">
-  <img src="https://www.yupdduk.com/images/main/main_appbanner_2022.jpg" alt="">
-</div>
-</div>
-<div class="chuchen">
-  <div class="yuppduk">YUPDDUK MENU</div>
-  <div class="yup-chuchen">엽기떡볶이가 추천합니다</div>
-  <div class="chuchen-menu">
-  <div class="yonjo"> 
-    <div class="yonjo-sub">
-      <div class="yonjo-yup">YUPDDUK</div>
-      <div class="yonjo-spi">매운맛의 원조</div>
-      <a href="#">more</a>
+  </div>
+  <div class="Text">
+    <div class="NOTICE">
+      <div class="NOTICE-BIG">NOTICE</div>
+      <br>
+      <ul class="NOTICE-UL">
+        <li>[23.02.24]엽떡앱 일시적 로그인 불가 안내</li><br>
+        <li>[23.02.14][2월 브랜드퀴즈 이벤트] 당첨자 안내</li><br>
+        <li>[23.02.07]엽떡앱 [SKT 휴대폰 본인 확인 서비스] 일시 중단 안내</li><br>
+        <li>[23.02.02]엽떡앱 방문포장 할인이벤트 연장</li><br><br>
+        <li>MORE<img class="more" src="https://www.yupdduk.com/images/main/morebtn.png" alt="더보기"></li>
+      </ul>
+    </div>
+    <div class="EVENT">
+      <div class="EVENT-BIG">EVENT</div>
+      <br>
+      <ul class="EVENT-UL">
+        <li>[23.04.10 ~ 23.04.30] [이벤트] 홀 주문 포인트 2배 적립</li><br>
+        <li>[23.04.06 ~ 23.04.27] [이벤트] 4월 목요일 타임이벤트</li><br>
+        <li>[22.12.16] [안내] 엽기떡볶이 세트메뉴 리뉴얼 안내</li><br>
+        <li>[22.10.12] [안내] 짜장떡볶이 리뉴얼 출시</li><br><br>
+        <li>MORE<img class="more" src="https://www.yupdduk.com/images/main/morebtn.png" alt="더보기"></li>
+      </ul>
     </div>
   </div>
-  <div class="SIDE"> 
-    <div class="SIDE-SUB">
-      <div class="SIDE-SIDE">SIDE</div>
-      <div class="SIDE-HOT">핫시즈너 사이드 메뉴</div>
-      <a href="#">more</a>
+  <div class="appbanner">
+    <div class="appbanner-1">
+      <img src="https://www.yupdduk.com/images/main/main_appbanner_2022.jpg" alt="">
     </div>
   </div>
-  <div class="TOPPING"> 
-    <div class="TOPPING-SUB">
-      <div class="TOPPING-TOP">TOPPING</div>
-      <div class="TOPPING-TOP-GOOD">토핑으로 더욱 맛있게!</div>
-      <a href="#">more</a>
+  <div class="chuchen">
+    <div class="yuppduk">YUPDDUK MENU</div>
+    <div class="yup-chuchen">엽기떡볶이가 추천합니다</div>
+    <div class="chuchen-menu">
+      <div class="yonjo">
+        <div class="yonjo-sub">
+          <div class="yonjo-yup">YUPDDUK</div>
+          <div class="yonjo-spi">매운맛의 원조</div>
+          <a href="#">more</a>
+        </div>
+      </div>
+      <div class="SIDE">
+        <div class="SIDE-SUB">
+          <div class="SIDE-SIDE">SIDE</div>
+          <div class="SIDE-HOT">핫시즈너 사이드 메뉴</div>
+          <a href="#">more</a>
+        </div>
+      </div>
+      <div class="TOPPING">
+        <div class="TOPPING-SUB">
+          <div class="TOPPING-TOP">TOPPING</div>
+          <div class="TOPPING-TOP-GOOD">토핑으로 더욱 맛있게!</div>
+          <a href="#">more</a>
+        </div>
+      </div>
+      <div class="SET">
+        <div class="SET-SUB">
+          <div class="SET-SET">SET</div>
+          <div class="SET-MORESET">다양한 세트메뉴</div>
+          <a href="#">more</a>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="SET"> 
-    <div class="SET-SUB">
-      <div class="SET-SET">SET</div>
-      <div class="SET-MORESET">다양한 세트메뉴</div>
-      <a href="#">more</a>
-    </div>
-  </div>
-</div>
-</div>
 </body>
+
 </html>
