--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- 
+  lang 지정 사용자 정의 속성 추가
+  => 명령 팔레트에서 settings.json 검색
+
+  "emmet.variables": {
+      "lang": "ko"
+  },
+-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -8,7 +16,6 @@
   <!-- 오픈 그래프와 트위터 카드 설정 (링크 프리뷰) -->
   <!-- 오픈 그래프 -->
   <!-- 웹페이지가 소셜미디어(페이스북, 카톡 등)로 공유될 때 우선적으로 활용되는 정보 -->
-
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Starbucks" />
   <meta property="og:title" content="Starbucks Coffee Korea" />
@@ -26,46 +33,51 @@
   <meta property="twitter:url" content="https://starbucks.co.kr" />
 
   <title>Starbucks Coffee Korea</title>
-    <!-- 파비콘은 프로젝트 폴더의 최상의(Root) 경로에 포함시키면 자동적용
+
+  <!-- 파비콘은 프로젝트 폴더의 최상위(Root) 경로에 포함시키면 자동 적용 
     최상위 경로에 없거나, ico가 아닌 별도 파일을 가진 경우에는 <link>로 적용
   -->
   <!-- favicon.ico 만들기: https://iconifier.net -->
   <link rel="icon" href="./favicon.png">
 
-  <!-- 스타일 초기화: 브라우저 별로 다르 기본스타일이 적용되는것을 초기화 -->
-  <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
+  <!-- 스타일 초기화: 브라우저 별로 다른 기본스타일이 적용되는 것을 초기화 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 
-  <!-- 구글 웹 폰트: 오픈 라이선스 폰트, 한글 지원하는지 확인 및 필요한 굵기만 선택 후 link  -->
+  <!-- 구글 웹폰트: 오픈 라이선스 폰트, 한글 지원하는지 확인 및 필요한 굵기만 선택 후 link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@100;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- 구글 머티리얼 아이콘: 구글에서 제공하는 머티리얼 스타일의 아이콘, 글자처럼 취급 가능한 장점 -->
-  <!-- 그외 fontawesome. bootstrap icon -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Icons"rel="stylesheet">
+  <!-- 그 외 fontawesome, bootstrap icon -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
+  <!-- SWIPER(8버전으로 진행) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   
-  <!-- SWIPER(8버젼으로 진행) -->
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-  />
   <link rel="stylesheet" href="./css/main.css">
 
-  <!-- GSAP -->
+  <!-- GSAP & ScrollToPlugin -->
   <!-- 순서 주의(main.js에서 사용하니까 더 앞에) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollToPlugin.min.js" integrity="sha512-WFeBxQtM/n6U8/Nd0Hz/Hq7n75NImbzM7Kc0y/4kE0kHnH1Be+nzm32RwbGoDsW1D9fjjPvI8LIWxLrZhxew/w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<!-- SWIPER -->
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- SWIPER(8버전으로 진행) -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="./JS/youtube.js"></script>
-  <script defer src="./JS/main.js"></script>
+
+  <!-- YOUTUBE -->
+  <script src="./js/youtube.js"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 <body>
   <!-- HEADER -->
   <header>
     <!-- .inner: 내용을 가운데 정렬하는 용도 -->
     <div class="inner">
-      <!-- 로고를 클릭하면 메인 페이지로 이동하도록 정대경로"/" 추가 -->
+      <!-- 로고를 클릭하면 메인 페이지로 이동하도록 절대경로 "/" 추가 -->
       <!-- 예: https://abc.com/ 의 마지막 / 기호를 의미 -->
       <a href="/" class="logo">
         <img src="./images/starbucks_logo.png" alt="STARBUCKS">
@@ -79,16 +91,15 @@
             <a href="/signin">Sign In</a>
           </li>
           <li>
-            <!-- #을 쓰면 CSS id 선택자를 이용해 페이지 내 특정 위치로 이동하기 때문에 찾는 id 값이 없으면 페이지 최상단으로 이동, 이게 싫으면 JS 이용 -->
+            <!-- #을 쓰면 CSS id 선택자를 이용해 페이지 내 특정 위치로 이동하기 때문에 찾는 id 값이 없으면 페이지 최당산으로 이동, 이게 싫으면 JS 이용 -->
             <a href="javascript:void(0)">My Starbucks</a>
           </li>
           <li>
-            <a href="javascript:void(0)">Customer Servis & Ideas</a>
+            <a href="javascript:void(0)">Customer Service & Ideas</a>
           </li>
           <li>
             <a href="javascript:void(0)">Find a Store</a>
           </li>
-
         </ul>
         <!-- 검색 영역 -->
         <div class="search">
@@ -402,10 +413,10 @@
     <!-- 전역 배지(고정 배너) 만들기 -->
     <div class="badges">
       <div class="badge">
-        <img src="./images/badge1.jpg" alt="">
+        <img src="./images/badge1.jpg" alt="Badge">
       </div>
       <div class="badge">
-        <img src="./images/badge2.jpg" alt="">
+        <img src="./images/badge2.jpg" alt="Badge">
       </div>
     </div>
   </header>
@@ -531,47 +542,47 @@
     <div class="inner">
       <img src="./images/floating1.png" alt="Icon" class="floating1">
       <img src="./images/floating2.png" alt="Icon" class="floating2">
-      
     </div>
   </section>
 
   <!-- SEASON PRODUCT -->
-  <section class="season-product">
+  <section class="season-product scroll-spy">
     <div class="inner">
       <img src="./images/floating3.png" alt="Icon" class="floating3">
-      <img src="./images/season_product_image.png" alt="product">
+
+      <img src="./images/season_product_image.png" alt="" class="product back-to-position to-right">
       <div class="text-group">
-        <img src="./images/season_product_text1.png" alt="title">
-        <img src="./images/season_product_text2.png" alt="description">
-        <div class="more">
-          <a href="javascript:void(0)" class="btn">자세히보기</a>
+        <img src="./images/season_product_text1.png" alt="" class="title back-to-position to-left delay-1">
+        <img src="./images/season_product_text2.png" alt="" class="description back-to-position to-left delay-2">
+        <div class="more back-to-position to-left delay-3">
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- RESERVE COFFEE -->
-  <section class="reserve-coffee">
+  <section class="reserve-coffee scroll-spy">
     <div class="inner">
-      <img src="./images/reserve_logo.png" alt="" class="reserve-logo">
+      <img src="./images/reserve_logo.png" alt="" class="reserve-logo back-to-position to-right">
       <div class="text-group">
-        <img src="./images/reserve_text.png" alt="" class="description">
-        <div class="more">
+        <img src="./images/reserve_text.png" alt="" class="description back-to-position to-right delay-1">
+        <div class="more back-to-position to-right delay-2">
           <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
         </div>
       </div>
-      <img src="./images/reserve_image.png" alt="product">
+      <img src="./images/reserve_image.png" alt="" class="product back-to-position to-left delay-3">
     </div>
   </section>
 
   <!-- PICK YOUR FAVORITE -->
-  <section class="pick-your-favorite">
+  <section class="pick-your-favorite scroll-spy">
     <div class="inner">
       <div class="text-group">
-        <img src="./images/favorite_text1.png" alt="" class="title">
-        <img src="./images/favorite_text2.png" alt="" class="description">
-        <div class="more">
-          <a href="javascript:void(0)" class="btn-btn--white">자세히 보기</a>
+        <img src="./images/favorite_text1.png" alt="" class="title back-to-position to-right">
+        <img src="./images/favorite_text2.png" alt="" class="description back-to-position to-right delay-1">
+        <div class="more back-to-position to-right delay-2">
+          <a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
         </div>
       </div>
     </div>
@@ -580,7 +591,7 @@
   <!-- RESERVE STORE -->
   <section class="reserve-store">
     <div class="inner">
-      <div class="modal">
+      <div class="medal">
         <div class="front">
           <img src="./images/reserve_store_medal_front.png" alt="">
         </div>
@@ -593,16 +604,16 @@
   </section>
 
   <!-- FIND STORE -->
-  <section class="find-store">
+  <section class="find-store scroll-spy">
     <div class="inner">
       <img src="images/find_store_texture1.png" alt="" class="texture1">
       <img src="images/find_store_texture2.png" alt="" class="texture2">
-      <img src="images/find_store_picture1.jpg" alt="" class="picture1">
-      <img src="images/find_store_picture2.jpg" alt="" class="picture2">
+      <img src="images/find_store_picture1.jpg" alt="" class="picture1 back-to-position to-right">
+      <img src="images/find_store_picture2.jpg" alt="" class="picture2 back-to-position to-right delay-1">
       <div class="text-group">
-        <img src="./images/find_store_text1.png" alt="" class="title">
-        <img src="./images/find_store_text2.png" alt="" class="description">
-        <div class="more">
+        <img src="./images/find_store_text1.png" alt="" class="title back-to-position to-left">
+        <img src="./images/find_store_text2.png" alt="" class="description back-to-position to-left delay-1">
+        <div class="more back-to-position to-left delay-2">
           <a href="javascript:void(0)" class="btn">매장찾기</a>
         </div>
       </div>
@@ -655,6 +666,44 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
+  <footer>
+    <div class="inner">
+      <ul class="menu">
+        <li><a href="javascript:void(0)" class="green">개인정보처리방침</a></li>
+        <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
+        <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
+        <li><a href="javascript:void(0)" class="green">위치정보 이용약관</a></li>
+        <li><a href="javascript:void(0)">스타벅스 카드 이용약관</a></li>
+        <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
+      </ul>
 
+      <div class="btn-group">
+        <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
+        <a href="javascript:void(0)" class="btn btn--white">신규입점제의</a>
+        <a href="javascript:void(0)" class="btn btn--white">사이트 맵</a>
+      </div>
+
+      <div class="info">
+        <span>사업자등록번호 201-81-21515</span>
+        <span>(주)스타벅스 코리아 대표이사 김재현</span>
+        <span>TEL : 1522-3232</span>
+        <span>개인정보 책임자 : 김재현</span>
+      </div>
+
+      <p class="copyright">
+        &copy; <span class="this-year"></span>
+        Starbucks Coffee Company. All Rights Reserved.
+      </p>
+      <img src="./images/starbucks_logo_only_text.png" alt="STARBUCKS" class="logo">
+    </div>
+  </footer>
+
+  <!-- SCROLL TO TOP -->
+  <div id="to-top">
+    <!-- <a href="#"> -->
+      <span class="material-icons">arrow_upward</span>
+    <!-- </a> -->
+  </div>
 </body>
 </html>
